--- a/css/main.css
+++ b/css/main.css
@@ -72,3 +72,7 @@ input[type="number"]{
 .fieldTile[data-isflagged="true"]{
     color: #C00;
 }
+
+.fieldTile[data-isbomb="true"]{
+    color: #C00;
+}
